# valsoft-library-backend

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  fly.toml  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
core/: config.py  create_app.py  logging.py
database/: metrics.py
database/models/: __init__.py  auth_sessions.py  book_copies.py  books.py  clients.py  loans.py  users.py
features/admin/: controllers.py  routes.py  schemas.py  services.py
features/auth/: controllers.py  dependencies.py  routes.py  schemas.py  services.py  session.py
features/books/: __init__.py  ai_services.py  controllers.py  copy_services.py  gemini_client.py  isbn_lookup.py  routes.py  schemas.py  services.py
features/clients/: __init__.py  controllers.py  routes.py  schemas.py  services.py
features/health/: routes.py
features/loans/: __init__.py  controllers.py  routes.py  schemas.py  services.py
middlewares/: exception_handler.py
migrations/: env.py
migrations/versions/: b600c6d713c3_add_book_and_loan_tables.py  c2f8a1b9e4d0_add_book_deleted_at_soft_delete.py  d4e5f6a7b8c9_add_book_image_url.py  e1f2a3b4c5d6_add_client_and_loan_client_id.py  f7a8b9c0d1e2_add_users_role.py  g8b9c0d1e2f3_seed_admin_user.py  h0a1b2c3d4e5_fix_users_role_pg_enum_to_varchar.py  i1a2b3c4d5e6_add_book_copy_and_loan_copy_id.py  j1a2b3c4d5e6_add_auth_session_table.py
tests/: conftest.py  test_admin_employees.py  test_admin_loans.py  test_auth.py  test_book_ai_enrich.py  test_gemini_client.py  test_library.py  test_observability.py
