[project]
name = "project-name"
version = "0.1.0"
description = "Project Description"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlmodel",
  "psycopg[binary]",
  "python-dotenv",
  "pydantic-settings",
  "alembic>=1.18.4",
  "passlib[bcrypt]>=1.7.4,<2.0.0",
  "pydantic[email]>=2.12.5",
  "bcrypt>=4.0.1,<5.0.0",
  "httpx>=0.27.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "prometheus-client>=0.24.1",
  "prometheus-fastapi-instrumentator>=7.1.0",
  "sentry-sdk[fastapi]>=2.57.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
